Connected top rated and most listened page templates to home

--- a/WAD/templates/ToP/base.html
+++ b/WAD/templates/ToP/base.html
@@ -34,9 +34,9 @@
 				<div class="inner">
 					<h3 class="masthead-brand">Top of the Playlists</h3>
 					<nav class="nav nav-masthead">
-						<a class="nav-link active" href="#">Home</a>
-						<a class="nav-link" href="#">Top 40</a>
-						<a class="nav-link" href="#">Most Listened</a>
+						<a class="nav-link active" href="/ToP/">Home</a>
+						<a class="nav-link" href="/ToP/top-rated/">Top 40</a>
+						<a class="nav-link" href="/ToP/most-listened/">Most Listened</a>
 					</nav>
 				</div>
 			</div>
