Login page renders properly

--- a/WAD/templates/ToP/base.html
+++ b/WAD/templates/ToP/base.html
@@ -34,9 +34,12 @@
 				<div class="inner">
 					<h3 class="masthead-brand">Top of the Playlists</h3>
 					<nav class="nav nav-masthead">
-						<a class="nav-link active" href="/ToP/">Home</a>
+						<a class="nav-link" href="/ToP/home/">Home</a>
 						<a class="nav-link" href="/ToP/top-rated/">Top 40</a>
 						<a class="nav-link" href="/ToP/most-listened/">Most Listened</a>
+						<a class="nav-link" href="#">View All</a>
+						<a class="nav-link" href="#">My Playlists</a>
+						<a class="nav-link" href="#">Create Playlist</a>
 					</nav>
 				</div>
 			</div>
