--- a/WAD/templates/ToP/most_listened.html
+++ b/WAD/templates/ToP/most_listened.html
@@ -6,9 +6,11 @@
 {% endblock %}
 
 {% block body %}
-<p>
-	<strong>Most Listened page works!</strong>
-</p>
+<div class="inner cover">
+	<p class="lead">
+		<strong>Most Listened page works!</strong>
+	</p>
+</div>
 <!-- <div class="col-lg-6">
 <h4>Most Listened Playlists</h4>
 <p>
