--- a/WAD/templates/ToP/top_rated.html
+++ b/WAD/templates/ToP/top_rated.html
@@ -6,8 +6,10 @@
 {% endblock %}
 
 {% block body %}
-<div>
-	<strong>Top rated page works!</strong>
+<div class="inner center">
+	<p class="lead">
+		<strong>Top rated page works!</strong>
+	</p>
 </div>
 <!-- <div class="col-lg-6">
 <h4>Top Rated Playlists</h4>
