--- a/WAD/templates/ToP/home.html
+++ b/WAD/templates/ToP/home.html
@@ -16,7 +16,7 @@ Home
 
 	<div class="mastfoot">
 		<div class="inner">
-            <p>Already a member? <a class="nav-link" href="#">Login!</a></p>
+            <p>Already a member? <a class="nav-link" href="/ToP/login/">Login!</a></p>
 		</div>
     </div>
 {% endblock %}
