--- a/WAD/templates/ToP/login.html
+++ b/WAD/templates/ToP/login.html
@@ -1,17 +1,20 @@
 {% extends 'ToP/base.html' %}
 	
-{% block title_block %}
+{% block title %}
 	Login
 {% endblock %}
 	
-{% block body_block %}
+{% block body %}
 <h1>Login to Top of the Playlists</h1>
+<br/>
 <form id="login_form" method="post" action="{% url 'login' %}">
 	{% csrf_token %}
 	Username: <input type="text" name="username" value="" size="50" />
-	<br />
+	<br/>
+	
 	Password: <input type="text" name="password" value="" size="50" />
-	<br />
-	<input type="submit" value="submit" />
+	<br/>
+	<input type="submit" value="Login" />
 </form>
+
 {% endblock %}
