Updated Create Playlist Templates

--- a/WAD/templates/ToP/base.html
+++ b/WAD/templates/ToP/base.html
@@ -37,9 +37,9 @@
 						<a class="nav-link" href="/ToP/home/">Home</a>
 						<a class="nav-link" href="/ToP/top-rated/">Top 40</a>
 						<a class="nav-link" href="/ToP/most-listened/">Most Listened</a>
-						<a class="nav-link" href="#">View All</a>
-						<a class="nav-link" href="#">My Playlists</a>
-						<a class="nav-link" href="#">Create Playlist</a>
+						<a class="nav-link" href="/ToP/view_all_playlists/">View All</a>
+						<a class="nav-link" href="/ToP/my_playlists/">My Playlists</a>
+						<a class="nav-link" href="/ToP/create_playlists/">Create Playlist</a>
 					</nav>
 				</div>
 			</div>
