--- a/WAD/templates/ToP/home.html
+++ b/WAD/templates/ToP/home.html
@@ -2,7 +2,7 @@
 
 
 {% block title %}
-Home
+	Home
 {% endblock %}
 
 {% block body %}
@@ -10,7 +10,7 @@ Home
         <h1 class="cover-heading">Top of The Playlists</h1>
 		<p class="lead">Top of the Playlists is a resource for all music lovers to share their favourite playlists.</p>
         <p class="lead">
-            <a href="#" class="btn btn-lg btn-secondary">Register Here!</a>
+            <button href="#" class="btn btn-lg btn-secondary"/>Register Here!</button>
         </p>
     </div>
 
