--- a/WAD/templates/ToP/view_all_playlists.html
+++ b/WAD/templates/ToP/view_all_playlists.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-<p>
+<p class="lead">
 	<strong>View All Playlists is functional</strong>
 </p>
 <!-- <div class="col-lg-6">
