Register template connected to home

--- a/WAD/templates/ToP/home.html
+++ b/WAD/templates/ToP/home.html
@@ -10,7 +10,7 @@
         <h1 class="cover-heading">Top of The Playlists</h1>
 		<p class="lead">Top of the Playlists is a resource for all music lovers to share their favourite playlists.</p>
         <p class="lead">
-            <button href="#" class="btn btn-lg btn-secondary"/>Register Here!</button>
+            <a href="/ToP/register/" class="btn btn-lg btn-secondary"/>Register Here!</a>
         </p>
     </div>
 
