Can view all playlists and click on them to view songs

--- a/WAD/templates/ToP/view_all_playlists.html
+++ b/WAD/templates/ToP/view_all_playlists.html
@@ -6,21 +6,20 @@
 {% endblock %}
 
 {% block body %}
-<p class="lead">
-	<strong>View All Playlists is functional</strong>
-</p>
-<!-- <div class="col-lg-6">
+
 <h4>All Playlists</h4>
-<p>
+
+<div class="col-lg-12">
 	{% if playlists %}
 	<ul class="list-group">
 		{% for playlist in playlists %}
-		<li class="list-group-item"><a href="{% url 'show_playlist' playlist.slug %}">{{ playlist.name }}</a></li>
+		<li class="list-group-item list-group-item-warning">
+			<a href="/ToP/playlist/{{ playlist.slug }}">{{ playlist.name }}</a>
+		</li>
 		{% endfor %}
 	</ul>
 	{% else %}
 		<strong>There are no playlists present.</strong>
 	{% endif %}
-</p>
-</div> -->
+</div>
 {% endblock %}
