--- a/WAD/templates/ToP/home.html
+++ b/WAD/templates/ToP/home.html
@@ -10,13 +10,13 @@
         <h1 class="cover-heading">Top of The Playlists</h1>
 		<p class="lead">Top of the Playlists is a resource for all music lovers to share their favourite playlists.</p>
         <p class="lead">
-            <a href="/ToP/register/" class="btn btn-lg btn-secondary"/>Register Here!</a>
+            <a href="{% url 'registration_register' %}" class="btn btn-lg btn-secondary"/>Register Here!</a>
         </p>
     </div>
 
 	<div class="mastfoot">
 		<div class="inner">
-            <p>Already a member? <a class="nav-link" href="/ToP/login/">Login!</a></p>
+            <p>Already a member? <a class="nav-link" href="{% url 'auth_login' %}">Login!</a></p>
 		</div>
     </div>
 {% endblock %}
