--- a/WAD/templates/ToP/login.html
+++ b/WAD/templates/ToP/login.html
@@ -9,8 +9,8 @@
 <br/>
 <form class="signin-form" role="form" method="post" action="{% url 'login' %}">
 	{% csrf_token %}
-	<P class="lead">
-	<h2 class="form-signin-heading">Login</h2>
+	<p class="lead">
+		<h2 class="form-signin-heading">Login</h2>
 	</p>
 	<label for="inputUsername" class="sr-only">Username</label>
 	<br/>
