--- a/WAD/templates/ToP/register.html
+++ b/WAD/templates/ToP/register.html
@@ -8,7 +8,7 @@
 		<form class="regsiter-form" role="form" method="post" action="{% url 'register' %}">
 			{% csrf_token %}
 			<label for="inputUsername" class="sr-only">Username</label>
-			<h2 class="form-signin-heading">Create a Top of the Playlists account</h2>
+			<h2 class="form-signin-heading">Register</h2>
 			<br/>
 				<input type="text" name="username" id="id_username" class="form-control" placeholder="Username" required autofocus/>
 			<br/>
