most viewed page appears

--- a/WAD/templates/ToP/base.html
+++ b/WAD/templates/ToP/base.html
@@ -36,7 +36,7 @@
 					<nav class="nav nav-masthead">
 						<a class="nav-link" href="/ToP/home/">Home</a>
 						<a class="nav-link" href="/ToP/top-rated/">Top 40</a>
-						<a class="nav-link" href="/ToP/most-listened/">Most Listened</a>
+						<a class="nav-link" href="/ToP/most_viewed/">Most Viewed</a>
 						<a class="nav-link" href="/ToP/view_all_playlists/">View All</a>
 						<a class="nav-link" href="/ToP/my_playlists/">My Playlists</a>
 						<a class="nav-link" href="/ToP/create_playlists/">Create Playlist</a>
