--- a/WAD/templates/ToP/top_viewed.html
+++ b/WAD/templates/ToP/top_viewed.html
@@ -2,17 +2,17 @@
 {% load staticfiles %}
 
 {% block title %}
-	Most Listened 
+	Top Viewed
 {% endblock %}
 
 {% block body %}
-<div class="inner cover">
+<div class="inner center">
 	<p class="lead">
-		<strong>Most Listened page works!</strong>
+		<strong>Top viewed page works!</strong>
 	</p>
 </div>
 <!-- <div class="col-lg-6">
-<h4>Most Listened Playlists</h4>
+<h4>Top Viewed Playlists</h4>
 <p>
 	{% if playlists %}
 	<ul class="list-group">
