Registration is functional

--- a/WAD/templates/ToP/home.html
+++ b/WAD/templates/ToP/home.html
@@ -9,14 +9,24 @@
     <div class="inner cover">
         <h1 class="cover-heading">Top of The Playlists</h1>
 		<p class="lead">Top of the Playlists is a resource for all music lovers to share their favourite playlists.</p>
-        <p class="lead">
+		{% if user.is_authenticated %}
+		<p class="lead">Welcome, {{ user.username }}. You are now logged in!</p>
+		<p class="lead">
+			<a href="{% url 'auth_logout' %}" class="btn btn-lg btn-secondary">Logout</a>
+		</p>
+		{% else %}
+		 <p class="lead">
             <a href="{% url 'registration_register' %}" class="btn btn-lg btn-secondary"/>Register Here!</a>
         </p>
+		{% endif %}
     </div>
-
+	
+	{% if user.is_authenticated %}
+	{% else %}
 	<div class="mastfoot">
 		<div class="inner">
             <p>Already a member? <a class="nav-link" href="{% url 'auth_login' %}">Login!</a></p>
 		</div>
     </div>
+	{% endif %}
 {% endblock %}
