--- a/WAD/templates/ToP/view_all_playlists.html
+++ b/WAD/templates/ToP/view_all_playlists.html
@@ -19,7 +19,7 @@
 		{% endfor %}
 	</ul>
 	{% else %}
-		<strong>There are no playlists present.</strong>
+		<p class="lead">There are no playlists present.</p>
 	{% endif %}
 </div>
 {% endblock %}
