Don;t know what's changed but oh well

--- a/WAD/templates/ToP/my_playlist.html
+++ b/WAD/templates/ToP/my_playlist.html
@@ -9,6 +9,7 @@
 <p class="lead">
 	<strong>My Playlists is functional</strong>
 </p>
+<a href="{url 'auth_password_change'}" class="btn btn-lg btn-secondary">Change Password</a>
 <!-- <div class="col-lg-6">
 <h4>My Playlists</h4>
 <p>
