--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -21,4 +21,5 @@
     {% else %}
 		The specified playlist does not exist!
 	{% endif %}
+    <a href="/ToP/playlist/{{ playlist.slug }}/add_song/">Add a Song</a> <br/>
 {% endblock %}
