--- a/WAD/templates/ToP/base.html
+++ b/WAD/templates/ToP/base.html
@@ -39,7 +39,7 @@
 						<a class="nav-link" href="/ToP/most_viewed/">Most Viewed</a>
 						<a class="nav-link" href="/ToP/view_all_playlists/">View All</a>
 						<a class="nav-link" href="/ToP/my_playlists/">My Playlists</a>
-						<a class="nav-link" href="/ToP/create_playlists/">Create Playlist</a>
+						<a class="nav-link" href="/ToP/create_playlist/">Create Playlist</a>
 						
 					</nav>
 				</div>
