Working Cookies with Views displaying

--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -8,6 +8,7 @@
 {% block body %}
     {% if playlist %}
 		<h1>{{ playlist.name }}</h1>
+		<strong> Views: </strong>{{ visits }}<br/>
 
 		{% if songs %}
 			<ul>
