--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -13,7 +13,12 @@
 		{% if songs %}
 			<ul>
 				{% for song in songs %}
-					<li>Title: {{ song.title }}<br/>Artist: {{ song.artist }}<br/>Genre: {{ song.genre}}<br/></li>
+					<li>
+					Title: {{ song.title }}<br/>
+					Artist: {{ song.artist }}<br/>
+					Genre: {{ song.genre}}<br/>
+					{{ song.album_art }}
+					</li>
 				{% endfor %}
 			</ul>
 		{% else %}
