--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -14,15 +14,10 @@
 			<ul>
 				{% for song in songs %}
 					<li>
-					
+					<img src="{{ ARTIST_MEDIA_URL }}{{ song.art }} "height='135' width='auto'><br/>
 					Title: {{ song.title }}<br/>
 					Artist: {{ song.artist }}<br/>
 					Genre: {{ song.genre}}<br/>
-					<!-- Custom styles for this template -->
-					<link href={% static "css/image_format.css" %} rel="stylesheet">
-					
-					<img src="{{ ARTIST_MEDIA_URL }}{{ song.art }} "height='135' width='auto'
-					
 					
 					</li>
 				{% endfor %}
