--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -8,17 +8,17 @@
 {% block body %}
     {% if playlist %}
 		<h1>{{ playlist.name }}</h1>
-		<strong> Views: </strong>{{ visits }}<br/>
+		<strong> Playlist Views: </strong>{{ visits }}<br/>
 
 		{% if songs %}
 			<ul>
 				{% for song in songs %}
 					<li>
-					<img src="{{ ARTIST_MEDIA_URL }}{{ song.art }} "height='135' width='auto'><br/>
+					<img src="{{ ARTIST_MEDIA_URL }}{{ song.artist_art }} "height='135' width='auto'>
+					<img src="{{ ARTIST_MEDIA_URL }}{{ song.album_art }} "height='135' width='auto'><br/>
 					Title: {{ song.title }}<br/>
 					Artist: {{ song.artist }}<br/>
 					Genre: {{ song.genre}}<br/>
-					
 					</li>
 				{% endfor %}
 			</ul>
