slightly less awful most viewed

--- a/WAD/templates/ToP/most_viewed.html
+++ b/WAD/templates/ToP/most_viewed.html
@@ -12,21 +12,19 @@
 	</p>
 </div>
 <<div class="col-lg-6">
-<h4>Most Viewed Playlists</h4>
-<p>
-	<var>most</var>
-	{% if playlists %}
-	<ul class="list-group">
-		{% for playlist in playlists %}
-		{% if playlist.views > most}
-		most=playlist
-		{% endif %}
-		<li class="list-group-item"><a href="{% url 'show_playlist' playlist.slug %}">{{ playlist.name }}</a></li>
-		{% endfor %}
-	</ul>
-	{% else %}
-		<strong>There are no playlists present.</strong>
-	{% endif %}
-</p>
-</div>
+<div>
+	<h3>Most Viewed Pages</h3>	
+		</div>
+		<ul>
+	       	   {% if playlists %}
+             	
+	              {% for playlist in playlists %}
+	                 <li><a href="{{ playlist.url }}">{{ playlist.name }}</a></li>
+	                 {% endfor %}
+	             </ul>
+	        {% else %}
+	             <strong>There are no playlists present.</strong>
+	        {% endif %}
+				</div>
+		<div>
 {% endblock %}
