functional most viewed and top rated

--- a/WAD/templates/ToP/most_viewed.html
+++ b/WAD/templates/ToP/most_viewed.html
@@ -11,20 +11,18 @@
 		<strong>Most Viewed page works!</strong>
 	</p>
 </div>
-<<div class="col-lg-6">
-<div>
-	<h3>Most Viewed Pages</h3>	
-		</div>
-		<ul>
-	       	   {% if playlists %}
-             	
-	              {% for playlist in playlists %}
-	                 <li><a href="{{ playlist.url }}">{{ playlist.name }}</a></li>
-	                 {% endfor %}
-	             </ul>
-	        {% else %}
-	             <strong>There are no playlists present.</strong>
-	        {% endif %}
-				</div>
-		<div>
+
+<div class="col-lg-12">
+	{% if playlists %}
+	<ul class="list-group">
+		{% for playlist in playlists %}
+		<li class="list-group-item list-group-item-warning">
+			<a href="/ToP/playlist/{{ playlist.slug }}">{{ playlist.name }}</a>
+		</li>
+		{% endfor %}
+	</ul>
+	{% else %}
+		<p class="lead">There are no playlists present.</p>
+	{% endif %}
+</div>
 {% endblock %}
