--- a/WAD/templates/ToP/top_rated.html
+++ b/WAD/templates/ToP/top_rated.html
@@ -11,18 +11,17 @@
 		<strong>Top rated page works!</strong>
 	</p>
 </div>
-<!-- <div class="col-lg-6">
-<h4>Top Rated Playlists</h4>
-<p>
+<div class="col-lg-12">
 	{% if playlists %}
 	<ul class="list-group">
 		{% for playlist in playlists %}
-		<li class="list-group-item"><a href="{% url 'show_playlist' playlist.slug %}">{{ playlist.name }}</a></li>
+		<li class="list-group-item list-group-item-warning">
+			<a href="/ToP/playlist/{{ playlist.slug }}">{{ playlist.name }}</a>
+		</li>
 		{% endfor %}
 	</ul>
 	{% else %}
-		<strong>There are no playlists present.</strong>
+		<p class="lead">There are no playlists present.</p>
 	{% endif %}
-</p>
-</div> -->
+</div>
 {% endblock %}
