--- a/WAD/templates/registration/login.html
+++ b/WAD/templates/registration/login.html
@@ -11,7 +11,7 @@
 		<br/>
 		<label for="inputPassword" class="sr-only">Password</label>
 		<input type="password" name="password" id="id_password" class="form-control" placeholder="Password" required autofocus/>
-		<a href="#" class="nav-link">Forgot Password?</a>
+		<a href="/accounts/password/reset/" class="nav-link">Forgot Password?</a>
 		<br/>
 		<p class="lead">
 			<input class="btn btn-lg btn-secondary" type="submit" value="Login"/>
