--- a/WAD/templates/registration/password_change_form.html
+++ b/WAD/templates/registration/password_change_form.html
@@ -1,7 +1,7 @@
 {% extends "ToP/base.html" %}
 {% load i18n %}
 
-{% block %}
+{% block body %}
 	<form method="post" action=".">
 		{% csrf_token %}
 		{{ form.as_p }}
