Reset password NEARLY done

--- a/WAD/templates/ToP/add_song.html
+++ b/WAD/templates/ToP/add_song.html
@@ -7,7 +7,7 @@
 {% block body %}
     {% if playlist %}
         <form role="form" id="song_form" method="post" action="/ToP/playlist/{{ playlist.slug }}/add_song/">
-		<h2 class="form-signing-heading">Add a Song to<a href="/ToP/playlist/{{ playlist.slug }}/">{{ playlist.name }}</a></h2>
+		<h2 class="form-signing-heading">Add a Song to <a href="/ToP/playlist/{{ playlist.slug }}/">{{ playlist.name }}</a></h2>
 		{% csrf_token %}
 		{% for hidden in form.hidden_fields %}
 			{{ hidden }}
@@ -18,7 +18,7 @@
 			{{ field }}<br/>
 		{% endfor %}
 		<br/>
-	    <button class="btn btn-primary" type="submit" name="submit">Add Song</button>
+	    <button class="btn btn-secondary" type="submit" name="submit">Add Song</button>
         </form>
     {% else %}
         <strong>A playlist by this name does not exist.</strong>
