--- a/WAD/templates/registration/login.html
+++ b/WAD/templates/registration/login.html
@@ -14,7 +14,7 @@
 		<a href="/accounts/password/reset/" class="nav-link">Forgot Password?</a>
 		<br/>
 		<p class="lead">
-			<input class="btn btn-lg btn-secondary" type="submit" value="Login"/>
+			<input class="btn btn-secondary" type="submit" value="Login"/>
 		</p>
 	</form>
 	<div class="mastfoot">
