--- a/WAD/templates/ToP/add_rating.html
+++ b/WAD/templates/ToP/add_rating.html
@@ -3,5 +3,10 @@
 {% block body %}
     <h1>New rating </h1>
 	<form>
-		<input type="radio" name="rating" value="1"
+		<input type="radio" name="rating" value="1"> 1<br>
+		<input type="radio" name="rating" value="2"> 2<br>
+		<input type="radio" name="rating" value="3"> 3<br>
+		<input type="radio" name="rating" value="4"> 4<br>
+		<input type="radio" name="rating" value="5"> 5<br>
+
 {% endblock %}
