--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -24,14 +24,12 @@
 			</ul>
 			<hr>
 			<a class="btn btn-default" href="/ToP/playlist/{{ playlist.slug }}/comment/">Add comment</a>
-			{% for comment in Comment %}
-				{% if playlist.comment={{ playlist.slug }} }
-					<div class="comment">
-						<div class="date">{{ comment.created_date }}</div>
-						<strong>{{ comment.author }}</strong>
-						<p>{{ comment.text|linebreaks }}</p>
-					
-					</div>
+			{% for comment in playlist.comments.all %}
+				<div class="comment">
+					<p><strong>{{ comment.author }}: </strong>{{ comment.text }}</br>
+					{{ comment.created_date }}
+					</p>
+				</div>
 			{% empty %}
 				<p>No comments </p>
 			{% endfor %}
