--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -7,6 +7,9 @@
 
 {% block body %}
     {% if playlist %}
+		{% if playlist.picture %}
+			<img src="{{ playlist.picture.url }} "height='135' width='auto'></br>
+		{% endif %}
 		<h1>{{ playlist.name }}</h1>
 		<strong> Playlist Views: </strong>{{ visits }}<br/>
 
