--- a/WAD/templates/ToP/most_viewed.html
+++ b/WAD/templates/ToP/most_viewed.html
@@ -8,15 +8,22 @@
 {% block body %}
 <div class="inner cover">
 	<p class="lead">
-		<strong>Most Viewed page works!</strong>
+		<h1>Most Viewed</h1>
 	</p>
+	<h4>The sites most viewed playlists</br>
+	Playlists with these kinda views aren't to be missed!</h4>
 </div>
 
 <div class="col-lg-12">
 	{% if playlists %}
 	<ul class="list-group">
 		{% for playlist in playlists %}
-		<li class="list-group-item list-group-item-warning">
+			<li class="list-group-item list-group-item-warning">
+			{% if playlist.picture %}
+				<img src="{{ playlist.picture.url }} "height='75' width='auto'>
+			{% else %}
+				<img src="{{ MEDIA_URL }}vinyl-883199_960_720.png "height='75' width='auto'>
+			{% endif %}	
 			<a href="/ToP/playlist/{{ playlist.slug }}">{{ playlist.name }}</a>
 		</li>
 		{% endfor %}
