--- a/WAD/templates/ToP/my_playlist.html
+++ b/WAD/templates/ToP/my_playlist.html
@@ -7,16 +7,21 @@
 
 {% block body %}
 <div class="col-lg-12">
-    <h4>My Playlists</h4>
+    <h1>My Playlists</h1>
 
 	{% if user.is_authenticated %}
-	<h1>{{ user.username }}, welcome to your playlists</h1>
+	<h4>{{ user.username }}, welcome to your playlists</h4>
 	<a href="{url 'auth_password_change'}" class="nav-link">Change Password</a>
 	    {% if playlists %}
 		    <ul class="list-group">
 			    {% for playlist in playlists %}
 				    {% if playlist.author == user.username %}
 				        <li class="list-group-item">
+							{% if playlist.picture %}
+								<img src="{{ playlist.picture.url }} "height='75' width='100'>
+							{% else %}
+								<img src="{{ MEDIA_URL }}vinyl-883199_960_720.png "height='75' width='auto'>
+							{% endif %}	
 						    <a href="/ToP/playlist/{{ playlist.slug }}">{{ playlist.name }}</a>
 				        </li>
 				    {% endif %}
