--- a/WAD/templates/ToP/top_rated.html
+++ b/WAD/templates/ToP/top_rated.html
@@ -8,14 +8,23 @@
 {% block body %}
 <div class="inner center">
 	<p class="lead">
-		<strong>Top rated page works!</strong>
+		<h1>The Top 40</h1>
 	</p>
 </div>
 <div class="col-lg-12">
+	<h4>This is where all the best playists on the site come together to battle it out for a place in the Top 40 Rankings!
+	Check back every day to see what new music playlists are that day!</h4>
 	{% if playlists %}
 	<ul class="list-group">
 		{% for playlist in playlists %}
 		<li class="list-group-item list-group-item-warning">
+		
+			{% if playlist.picture %}
+				<img src="{{ playlist.picture.url }} "height='75' width='auto'>
+			{% else %}
+				<img src="{{ MEDIA_URL }}vinyl-883199_960_720.png "height='75' width='auto'>
+			{% endif %}	
+			
 			<a href="/ToP/playlist/{{ playlist.slug }}">{{ playlist.name }}</a>
 		</li>
 		{% endfor %}
