--- a/WAD/templates/ToP/my_playlist.html
+++ b/WAD/templates/ToP/my_playlist.html
@@ -6,13 +6,11 @@
 {% endblock %}
 
 {% block body %}
-<<<<<<< HEAD
 <p class="lead">
 	<strong>My Playlists is functional</strong>
 </p>
-<a href="{url '/accounts/password_change/'}" class="nav-link">Change Password</a>
+<a href="{url 'password_change/'}" class="nav-link">Change Password</a>
 <!-- <div class="col-lg-6">
-=======
     {% if user.is_authenticated %}
         <h1>{{ user.username }}, welcome to your playlists</h1>
     {% else %}
@@ -21,7 +19,6 @@
 
 <!--<a href="{url 'auth_password_change'}" class="nav-link">Change Password</a>
 <div class="col-lg-6">
->>>>>>> 2ec865ad1af86ce1b80aebdb04055c7468397014
 <h4>My Playlists</h4>
 <p>
 	{% if playlists %}
