--- a/WAD/templates/registration/password_change_done.html
+++ b/WAD/templates/registration/password_change_done.html
@@ -1,6 +1,6 @@
 {% extends "ToP/base.html" %}
 {% load i18n %}
 
-{% block body_block %}
-	<p>{% trans 'Password Changed' %}</p>
+{% block body %}
+	<p>Password Successfully changed</p>
 {% endblock %}
