--- a/WAD/templates/registration/password_change_form.html
+++ b/WAD/templates/registration/password_change_form.html
@@ -2,10 +2,34 @@
 {% load i18n %}
 
 {% block body %}
-	<form method="post" action=".">
+	<form role="form" method="post" action=".">
 		{% csrf_token %}
-		{{ form.as_p }}
-		
-		<input type="submit" value="{% trans 'Submit' %}" />
+		<div class="from-group">
+		<p class="lead">
+			<input class="form-control" id="id_old_password" name="old_password" label="Old password" type="password" placeholder="Old Password" required autofocus/>
+		</p>
+		<p class="lead">
+			<input class="form-control" id="id_new_password1" name="new_password1" label="New Password" type="password" placeholder="New Password" required autofocus/>
+		</p>
+		<span class="helptext" align="left">
+		<p class = "lead">
+		Your password can't be too similar to your other personal information.<br/>
+		Your password must contain at least 8 characters.<br/>
+		Your password can't be a commonly used password.<br/>
+		Your password can't be entirely numeric.
+		</p>
+		</span>
+		<p class="lead">
+			<input class="form-control" id="id_new_password2" name="new_password2" label="New Password Confirmation" type="password" placeholder="New Password Confirmation" required autofocus/>
+		</p>
+		<span class="helptext" align="left">
+		<p class="lead">
+			Enter the same password as before for verification.
+		</p>
+		</span>
+		</p>
+		</div>
+		<br/>
+		<button type="submit" class="btn btn-secondary">Submit</button>
 	</form>
 {% endblock %}
