--- a/WAD/templates/registration/password_reset_form.html
+++ b/WAD/templates/registration/password_reset_form.html
@@ -3,9 +3,11 @@
 
 {% block body %}
 <form method="post" action=".">
-  {% csrf_token %} 
-  {{ form.as_p }}
+	{% csrf_token %} 
+	<p class="lead">
+		<input class="form-control" id="id_email" name="email" type="email" placeholder="E-mail" required autofocus/>
+	</p>
 
-  <input type="submit" class="btn btn-secondary" value="{% trans 'Submit' %}" />
+	<input type="submit" class="btn btn-secondary" value="{% trans 'Submit' %}" />
 </form>
 {% endblock %}
