--- a/WAD/templates/ToP/base.html
+++ b/WAD/templates/ToP/base.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+<script src="{% static "js/ToP-jquery.js" %}"></script>
+
 
 <html lang="en">
   <head>
