--- a/WAD/templates/ToP/home.html
+++ b/WAD/templates/ToP/home.html
@@ -15,7 +15,7 @@
 		{% else %}
             <a href="{% url 'registration_register' %}" class="btn btn-secondary"/>Register Here!</a>
 		{% endif %}
-    </div>
+	</div><br />
 	
 	{% if user.is_authenticated %}
 	{% else %}
