--- a/WAD/templates/ToP/most_viewed.html
+++ b/WAD/templates/ToP/most_viewed.html
@@ -10,8 +10,7 @@
 	<p class="lead">
 		<h1>Most Viewed</h1>
 	</p>
-	<h4>The sites most viewed playlists</br>
-	Playlists with these kinda views aren't to be missed!</h4>
+	<h5>Playlists with these kinda views aren't to be missed!</h5>
 </div>
 
 <div class="col-lg-12">
@@ -24,7 +23,14 @@
 			{% else %}
 				<img src="{{ MEDIA_URL }}vinyl-883199_960_720.png "height='75' width='auto'>
 			{% endif %}	
-			<a href="/ToP/playlist/{{ playlist.slug }}">{{ playlist.name }}</a>
+			<a href="/ToP/playlist/{{ playlist.slug }}" class="trigger">{{ playlist.name }}</a>
+				<div class="pop-up" style="display: none">
+					{% if playlist.author %}
+						<p>Author: {{ playlist.author }}</p>
+					{% else %}
+						<p>Author: N/A</p>
+					{% endif %}
+				</div>
 		</li>
 		{% endfor %}
 	</ul>
