--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -45,5 +45,7 @@
     {% else %}
 		The specified playlist does not exist!
 	{% endif %}
-    <a href="/ToP/playlist/{{ playlist.slug }}/add_song/">Add a Song</a> <br/>
+	{% if playlist.author == user.username %}
+    	<a href="/ToP/playlist/{{ playlist.slug }}/add_song/">Add a Song</a> <br/>
+	{% endif %}
 {% endblock %}
