--- a/WAD/templates/ToP/add_rating.html
+++ b/WAD/templates/ToP/add_rating.html
@@ -2,13 +2,8 @@
 
 {% block body %}
     <h1>New rating </h1>
-    <form method="POST" class="post-form">{% csrf_token %}
+    <form action="" method="POST" class="post-form">{% csrf_token %}
 	        {{ form.as_p }}
-		<input type="radio" name="rating" value="1"> 1<br>
-		<input type="radio" name="rating" value="2"> 2<br>
-		<input type="radio" name="rating" value="3"> 3<br>
-		<input type="radio" name="rating" value="4"> 4<br>
-		<input type="radio" name="rating" value="5"> 5<br>
 		<button type="submit" class="save btn btn-default">Send</button>
 		</form>
 
