--- a/WAD/templates/ToP/playlist.html
+++ b/WAD/templates/ToP/playlist.html
@@ -42,8 +42,8 @@
 			<a class="btn btn-default" href="/ToP/playlist/{{ playlist.slug }}/rating/">Add rating</a>
 			{% for rating in playlist.ratings.all %}
 				<div class="rating">
-					<p><strong>{{ rating.author }}: </strong>{{ rating.text }}</br>
-					{{ rating.created_date }}
+					<p><strong>{{ rating.author }}: </strong>{{ rating.rating }}</br>
+					{{ rating.created_date }} 
 					</p>
 				</div>
 			{% empty %}
