--- a/WAD/templates/ToP/create_playlist.html
+++ b/WAD/templates/ToP/create_playlist.html
@@ -20,7 +20,7 @@
 			{% endfor %}
 			<div>
 			<br/>
-		    <input type="submit" name="submit" value="Create Playlist" class="btn btn-sedondary" />
+		    <input type="submit" name="submit" value="Create Playlist" class="btn btn-secondary" />
 			</div>
 		</form>
     </div>
