--- a/WAD/templates/ToP/my_playlist.html
+++ b/WAD/templates/ToP/my_playlist.html
@@ -6,32 +6,36 @@
 {% endblock %}
 
 {% block body %}
-<div class="col-lg-12">
-    <h1>My Playlists</h1>
+<div class="inner cover">
+	<h1>My Playlists</h1>
+</div>
 
 	{% if user.is_authenticated %}
 	<h4>{{ user.username }}, welcome to your playlists</h4>
 	<a href="accounts/password_change/" class="nav-link">Change Password</a>
+	<div class="col-lg-12">
 	    {% if playlists %}
 		    <ul class="list-group">
 			    {% for playlist in playlists %}
 				    {% if playlist.author == user.username %}
-				        <li class="list-group-item">
+				        <li class="list-group-item list-group-item-warning">
+							
 							{% if playlist.picture %}
-								<img src="{{ playlist.picture.url }} "height='75' width='100'>
+								<img src="{{ playlist.picture.url }} "height='75' width='auto'>
 							{% else %}
 								<img src="{{ MEDIA_URL }}vinyl-883199_960_720.png "height='75' width='auto'>
 							{% endif %}	
-						    <a href="/ToP/playlist/{{ playlist.slug }}">{{ playlist.name }}</a>
+							
+						    <a href="/ToP/playlist/{{ playlist.slug }}" class="my_playlists">{{ playlist.name }}</a>
 				        </li>
 				    {% endif %}
 			    {% endfor %}
 		    </ul>
 	    {% else %}
-		    <strong>There are no playlists present.</strong>
+			<p class="lead">There are no playlists present.</p>
 	    {% endif %}
+	</div>
     {% else %}
-        <strong>You are not logged in. Please go to the home page and log in first.</strong>
+        <p class="lead">You are not logged in. Please go to the home page and log in first.</p>
     {% endif %}
-</div>
 {% endblock %}
