--- a/WAD/templates/ToP/my_playlist.html
+++ b/WAD/templates/ToP/my_playlist.html
@@ -11,7 +11,17 @@
 </div>
 
 	{% if user.is_authenticated %}
-	<h4>{{ user.username }}, welcome to your playlists</h4>
+	<center>
+		<div class="box">
+		<div class="power">☮</div>
+		<div class="userbox">
+		<div class="pic">{{ userprofile.picture }}</div>
+		</div>
+    <p><span class="user">{{ username }}</span></p>
+	{{ userprofile }}
+  </div>
+  
+</center>
 	<a href="accounts/password_change/" class="nav-link">Change Password</a>
 	<div class="col-lg-12">
 	    {% if playlists %}
