--- a/WAD/templates/registration/registration_form.html
+++ b/WAD/templates/registration/registration_form.html
@@ -28,6 +28,7 @@
 				Enter the same password as before for verification.
 			</span>
 		</p>
+		<input id="id_image" type="file" class="" name="image">
 		</div>
 		<br/>
 		<button type="submit" class="btn btn-default">Submit</button>
