--- a/WAD/static/css/cover.css
+++ b/WAD/static/css/cover.css
@@ -70,7 +70,7 @@ body {
 
 .masthead {
   margin-bottom: 2rem;
-  position: absolute;
+ 
 }
 
 .masthead-brand {
@@ -104,6 +104,9 @@ h1 {
 	margin-top: 7rem;
 }
 
+p {
+	padding: 1rem;
+}
 @media (min-width: 48em) {
   .masthead-brand {
     float: left;
@@ -177,6 +180,7 @@ img {
   object-fit: cover;
   width:100px;
   height:100px;
+
 }
 
 /* Hovering over a playlist name */
