--- a/WAD/templates/ToP/my_playlist.html
+++ b/WAD/templates/ToP/my_playlist.html
@@ -26,7 +26,7 @@
 								<img src="{{ MEDIA_URL }}vinyl-883199_960_720.png "height='75' width='auto'>
 							{% endif %}	
 							
-						    <a href="/ToP/playlist/{{ playlist.slug }}" class="my_playlists">{{ playlist.name }}</a>
+						    <a href="{% url 'show_playlist' playlist.slug %}" class="my_playlists">{{ playlist.name }}</a>
 				        </li>
 				    {% endif %}
 			    {% endfor %}
