--- a/WAD/templates/ToP/base.html
+++ b/WAD/templates/ToP/base.html
@@ -37,13 +37,13 @@
 				<div class="inner">
 					<h3 class="masthead-brand">Top of the Playlists</h3>
 					<nav class="nav nav-masthead">
-						<a class="nav-link" href="/ToP/home/">Home</a>
-						<a class="nav-link" href="/ToP/top-rated/">Top 40</a>
-						<a class="nav-link" href="/ToP/most_viewed/">Most Viewed</a>
-						<a class="nav-link" href="/ToP/view_all_playlists/">View All</a>
+						<a class="nav-link" href="{% url 'home' %}">Home</a>
+						<a class="nav-link" href="{% url 'top_rated' %}">Top 40</a>
+						<a class="nav-link" href="{% url 'most_viewed' %}">Most Viewed</a>
+						<a class="nav-link" href="{% url 'view_all_playlists' %}">View All</a>
             {% if user.is_authenticated %}
 						    <a class="nav-link" href="{% url 'my_playlists' %}">My Playlists</a>
-						    <a class="nav-link" href="/ToP/create_playlist/">Create Playlist</a>
+						    <a class="nav-link" href="{% url 'create_playlist' %}">Create Playlist</a>
             {% endif %}
 						
 					</nav>
